--- a/codedarshan.html
+++ b/codedarshan.html
@@ -69,7 +69,7 @@
   <img src="HTML...png" class="img-fluid" alt="Responsive image">
   <HR>
   <div style="float :center">
-    <div style="width:1473px; height: 135px; background-color:black; color:aqua; float:center;" <h5>
+    <div style="background-color:black; color:aqua; float:center;" <h5>
       The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a
       web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such
       as JavaScript.
